k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chino-api
  namespace: stube
  labels:
    app: chino-api
    value-stream: stube
spec:
  selector:
    app: chino-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
